--- a/html/reservationairticket/about-us.html
+++ b/html/reservationairticket/about-us.html
@@ -8,24 +8,20 @@
     <title>24/7 Airlines Reservations – Book a New Flight, Make a Change or Cancellation</title>
 
     <!--fav icon-->
-    <link rel="icon" href="https://us-1ae7e.kxcdn.com/img/reservation/ico/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32"
-          href="https://us-1ae7e.kxcdn.com/img/reservation/ico/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96"
-          href="https://us-1ae7e.kxcdn.com/img/reservation/ico/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16"
-          href="https://us-1ae7e.kxcdn.com/img/reservation/ico/favicon-16x16.png">
+    <link rel="icon" href="img/reservation/ico/favicon.ico">
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-          crossorigin="anonymous">
+    <link href="https://static.reservationairticket.com/css/bootstrap.min.css"  rel="stylesheet" type="text/css">
+
+    <!--Font Awesome 5-->
+    <link href="https://static.reservationairticket.com/css/modules/fontawesome.min.css" rel="stylesheet">
+    <link href="https://static.reservationairticket.com/css/modules/solid.min.css" rel="stylesheet">
 
     <!--Font Awesome 5.8.1-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css" rel="stylesheet">
+    <!--    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css" rel="stylesheet">-->
 
     <!-- Material Design Bootstrap and Custom included -->
-    <link href="https://us-1ae7e.kxcdn.com/css/reservationPhNum.min.css" rel="stylesheet">
+    <link href="https://static.reservationairticket.com/css/reservationPhNum.min.css" rel="stylesheet">
 
     <!-- Number Pool swap-->
     <script src=//b-js.ringba.com/CA61b9c4a0a224426eaef1b970467fd809 async></script>
@@ -35,7 +31,7 @@
     <nav class="navbar navbar-expand-lg navbar-orange-secondary secondary-color">
         <div class="container" id="navContainer">
             <a class="navbar-brand" href="#">
-                <img src="https://us-1ae7e.kxcdn.com/img/reservation/reservationairticket-logo.png" class="img-fluid" alt="Reservation Air Ticket">
+                <img src="https://static.reservationairticket.com/img/reservation/reservationairticket-logo.png" class="img-fluid" alt="Reservation Air Ticket">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,7 +82,7 @@
 
                     <!-- Card image -->
                     <div class="card-image-custom">
-                        <img src="https://us-1ae7e.kxcdn.com/img/reservation/check-circle.png" alt="Card image cap">
+                        <img src="https://static.reservationairticket.com/img/reservation/check-circle.png" alt="Card image cap">
                     </div>
                     <!-- Card content -->
                     <div class="card-body">
@@ -110,7 +106,7 @@
 
                     <!-- Card image -->
                     <div class="card-image-custom">
-                        <img src="https://us-1ae7e.kxcdn.com/img/reservation/check-circle.png" alt="Card image cap">
+                        <img src="https://static.reservationairticket.com/img/reservation/check-circle.png" alt="Card image cap">
                     </div>
                     <!-- Card content -->
                     <div class="card-body">
@@ -134,7 +130,7 @@
 
                     <!-- Card image -->
                     <div class="card-image-custom">
-                        <img src="https://us-1ae7e.kxcdn.com/img/reservation/check-circle.png" alt="Card image cap">
+                        <img src="https://static.reservationairticket.com/img/reservation/check-circle.png" alt="Card image cap">
                     </div>
                     <!-- Card content -->
                     <div class="card-body">
@@ -196,19 +192,16 @@
 
 <!-- SCRIPTS -->
 <!--JQuery -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script type="text/javascript" src="https://static.reservationairticket.com/js/jquery-3.3.1.min.js"></script>
 <!--Popper+Bootstrap-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://static.reservationairticket.com/js/popper.min.js"></script>
+<script type="text/javascript" src="https://static.reservationairticket.com/js/bootstrap.min.js"></script>
 <!-- MDB core JavaScript -->
-<script type="text/javascript" src="https://us-1ae7e.kxcdn.com/js/mdb.min.js"></script>
+<script type="text/javascript" src="https://static.reservationairticket.com/js/mdb.min.js"></script>
 <script>
     const numberString = "+16072608096";
     const formattedNumber = "1(607)-260-8096";
 </script>
-<script type="text/javascript" src="https://us-1ae7e.kxcdn.com/js/basic.min.js"></script>
+<script type="text/javascript" src="https://static.reservationairticket.com/js/basic.min.js"></script>
 </body>
 </html>
